--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,7 @@
     text-align: center;
     font-family: 'Cinzel'
 }
+
+#heatMap_container{
+    background-image: url(/images/questionScreen.PNG);
+}
