--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     font-family: 'Cinzel'
 }
 
-table.table td {
+table.table th, table.table td {
     padding-top: 0.7rem;
     padding-bottom: 0.7rem;
 }
