--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ table.table th, table.table td {
     height: 120px;
     -webkit-animation: spin 2s linear infinite; /* Safari */
     animation: spin 2s linear infinite;
+    display: inline-block;
 }
 
 /* Safari */
