--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,14 @@ table.table th, table.table td {
     100% { transform: rotate(360deg); }
 }
 
-#container .highcharts-legend-series-active g.highcharts-series:not(.highcharts-series-hover), .highcharts-legend-point-active .highcharts-point:not(.highcharts-point-hover), .highcharts-legend-series-active .highcharts-markers:not(.highcharts-series-hover), .highcharts-legend-series-active .highcharts-data-labels:not(.highcharts-series-hover) {
+#heatMap_container .highcharts-legend-series-active g.highcharts-series:not(.highcharts-series-hover), .highcharts-legend-point-active .highcharts-point:not(.highcharts-point-hover), .highcharts-legend-series-active .highcharts-markers:not(.highcharts-series-hover), .highcharts-legend-series-active .highcharts-data-labels:not(.highcharts-series-hover) {
     opacity: 1;
+}
+
+.highcharts-legend-item.highcharts-undefined-series.highcharts-color-undefined {
+    pointer-events: none;
+}
+
+#heatMap_container .highcharts-container .highcharts-root .highcharts-exporting-group{
+    display: none;
 }
