--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ table.table th, table.table td {
     display: none;
 }
 
-#heatMap_container .highcharts-container .highcharts-root .highcharts-axis-labels .highcharts-yaxis-labels .highcharts-credits{
+#heatMap_container .highcharts-container .highcharts-root .highcharts-credits{
     display: none;
 }
 
